# simge

./: CMakeLists.txt  README.md
docs/: examples.html  index.html  style.css  tutorial.html
include/simge/algo/: Atherton.hpp  Containment.hpp  IsConvex.hpp  LinePlaneInx.hpp  LineTriangleInx.hpp  Monotone.hpp  TriangleTriangleInx.hpp
include/simge/geom/: Edge.hpp  Operations.hpp  Orientation.hpp  Point.hpp  Polygon.hpp  Vector.hpp
include/simge/glut/: Application.hpp  IdleWorker.hpp  Planar.hpp  Point.hpp  Window.hpp
include/simge/util/: Color.hpp  Conversion.hpp  Enum.hpp  Polyline.hpp  PolylineFile.hpp  Turtle.hpp  Utility.hpp
src/: CMakeLists.txt
src/algo/: Atherton.cpp  Containment.cpp  IsConvex.cpp  LinePlaneInx.cpp  LineTriangleInx.cpp  Monotone.cpp  TriangleTriangleInx.cpp
src/glut/: Application.cpp  IdleWorker.cpp  Planar.cpp  Window.cpp
src/util/: Color.cpp  Turtle.cpp  Utility.cpp
